--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
@@ -143,6 +144,7 @@
   },
   "devDependencies": {
     "less": "^4.1.2",
-    "less-loader": "^11.0.0"
+    "less-loader": "^11.0.0",
+    "style-resources-loader": "^1.5.0"
   }
 }
