--- a/package.json
+++ b/package.json
@@ -73,7 +73,20 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "parserOptions": {
+      "babelOptions": {
+        "presets": [
+          [
+            "babel-preset-react-app",
+            false
+          ],
+          [
+            "babel-preset-react-app/prod"
+          ]
+        ]
+      }
+    }
   },
   "browserslist": {
     "production": [
