--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "dva": "^2.4.1",
+    "echarts": "^5.3.3",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "highlight": "^0.2.4",
+    "highlight.js": "^11.5.1",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
