--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "dotenv-expand": "^5.1.0",
     "dva": "^2.4.1",
     "echarts": "^5.3.3",
-    "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
@@ -163,6 +162,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.24.0",
+    "eslint-plugin-react": "^7.31.8",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
     "style-resources-loader": "^1.5.0"
