--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@tiptap/extension-color": "^2.0.3",
     "@tiptap/extension-image": "^2.0.3",
     "@tiptap/extension-placeholder": "^2.0.3",
+    "@tiptap/extension-text-align": "^2.0.3",
     "@tiptap/extension-text-style": "^2.0.3",
     "@tiptap/pm": "^2.0.3",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
-    "antd": "^5.5.1",
+    "antd": "^5.8.3",
     "axios": "^0.27.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -63,7 +64,7 @@
     "react-refresh": "^0.11.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "recoil": "^0.7.5",
+    "recoil": "^0.7.7",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
